--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,6 @@ Pillow>=9.0.0
 pycryptodome>=3.15.0
 
 # Note: FFmpeg is required for audio conversion
-# Windows: 
-# Download from https://ffmpeg.org/download.html OR  use command: choco install ffmpeg
+# Windows: Download from https://ffmpeg.org/download.html OR  use command: choco install ffmpeg
 # Linux: sudo apt install ffmpeg
 # Mac: brew install ffmpeg
